--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="fas fa-quote-left"></i>
                                 <p>Je suis avant tout un passionné de développement
                                     informatique. Je suis développeur web, mobile et software
-                                    depuis 7 ans. Ma grande expérience au cours de ces
+                                    depuis 10 ans. Ma grande expérience au cours de ces
                                     dernières années m’a permis de travailler sur de nombreux
                                     outils et avoir une vision très large afin d’être le plus rapide et
                                     le plus efficace possible.</p>
@@ -254,7 +254,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 <div class="card-body">
                                                     <i class="fas fa-list-ul mb-4"></i>
                                                     <h5 class="card-title text-uppercase">Développement web</h5>
-                                                    <p class="card-text">Développement Front-end et back-end , ReactJS,VueJS, NodeJs </p>
+                                                    <p class="card-text">Développement Front-end et back-end , ReactJS, Asto, NodeJs </p>
                                                 </div>
                                             </div>
 
@@ -331,7 +331,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="timeline py-lg-5 py-3">
            
             <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center">EXPERIENCE</h3>
-            <h4 class="sub-tittle-w3 text-uppercase text-center">7 ans d'éxpérience dans le développement informatique</h4>
+            <h4 class="sub-tittle-w3 text-uppercase text-center">10 ans d'éxpérience dans le développement informatique</h4>
             <div id="my-timeline"></div>
         </div>
 
@@ -644,7 +644,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <hr>
             <div class="d-flex justify-content-between pt-lg-3  footer-bottom-cpy">
                 <div class="copy-right-w3ls">
-                    <p>© 2023 nadhoir.com
+                    <p>© 2025 nadhoir.com
      
 
                     </p>
@@ -746,7 +746,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             var events = [
                 {
-                    date: '2023',
+                    date: '2025',
                     content: 'CACD2 <small>Développeur Front end</small>'
                 },
                 {
