--- a/card.html
+++ b/card.html
@@ -339,7 +339,7 @@
       // Détection de visage
       async function loadCascadeClassifier() {
         const response = await fetch(
-          "https://docs.opencv.org/4.11.0/haarcascade_frontalface_default.xml"
+          "classifiers/haarcascade_frontalface_default.xml"
         );
         const buffer = await response.arrayBuffer();
         const data = new Uint8Array(buffer);
